# libfuji

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libfuji.json
.github/workflows/: suite.yml
fp/: .gitignore  CMakeLists.txt  README.md
fp/d185/: xh1_d185_sepia.txt  xt5_d185_3_to_host
fp/fp2/: 20250112_0049.FP2  20250112_0060.FP2  DSCF1810.FP2  DSCF2192.FP2  DSCF2911.FP2  DSCF3010.FP2
fp/fp3/: DSCF1810.FP3  DSCF2192.FP3  DSCF2911(1).FP3  DSCF2911.FP3
fp/src/: cli.c  d185.c  data.c  ezxml.c  ezxml.h  fp.h  xml.c
lib/: app.h  backend.c  bluetooth.c  cli.c  data.c  discovery.c  fuji.c  fuji.h  fuji_usb.c  jank.c  module.c  module.h  old.c  plat.c  tester.c
